--- a/demo/package.json
+++ b/demo/package.json
@@ -7,9 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.45",
