--- a/demo/package.json
+++ b/demo/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "typescript": "^4.7.3",
     "vite": "^2.9.12"
