--- a/demo/package.json
+++ b/demo/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@chatui/core": "^2.4.2",
     "axios": "^1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
